# seeval

./: .gitignore  README.md  agent_util.py  agents.py  config.yaml  data_types.py  execute.py  main.py  pyproject.toml  requirements.txt  scenarios.jsonl  sketch.py  test.py  utils.py
examples/: contrastive_outputs.jsonl  main.py
src/examples/: aws_index.html  evaluator.js  index.html  main.py  math_test.py  scenarios.jsonl  score copy.html  score.html
src/seevals/: __init__.py  agent_util.py  agents.py  data_types.py  execute.py  path_utils.py  utils.py
