[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seevals"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Zane Starr"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "dspy==3.0.0",
  "numpy==2.3.2",
  "jsonpath_ng==1.7.0",
  "pandas",
]

[project.urls]
Source = "https://github.com/causall/seevals"

[tool.hatch.version]
path = "src/seevals/__about__.py"

[tool.hatch.envs.default]
installer = "uv"
dependencies = [
  "dspy==3.0.x",
  "numpy==2.3.2"
]

[tool.hatch.envs.dev]
installer = "uv"
dependencies = [
  "seevals",
  "matplotlib",
  "pytest",
  "ruff",
]

[tool.hatch.envs.dev.scripts]
test = "pytest"
check = "ruff check"
lint = "ruff check --fix && ruff format"
